* Unhallowed Boneforge
** Ahgnox the Corpsekeeper
*** New: UTID updated.
*** Fixed: Name corrected.
** Avoxcia
*** New: UTID updated.
** Bruzhail the Black Chariot
*** New: UTID updated.
*** Fixed: Name corrected.
** Forgelord Helix
*** New: UTID updated.
** Necrotic Throne
*** New: UTID updated for main Throne.
*** New: Sub Units with appropriate UTIDs added for left and right Throne sections.

* Storm Breaker Protocol
** Citybreaker Zidae
*** New: UTID updated.
** Telaphalon
*** New: UTID updated.
** Vellion the Pestilent
*** New: UTID updated for Body segment.
*** New: Added Vellion's Left Trunk as a Unit Object.
*** New: Added Vellion's Right Trunk as a Unit Object.
*** New: Added Pestilence Spewer as a Unit Object.
*** New: Added all Body segments to Phase Monitor.

* Archive of Flesh
** Tzul
*** New: UTID updated.
** Emphalea
*** New: UTID updated.
** Ahzrius
*** New: UTID updated.
** Filth Gorger Vorka
*** New: UTID updated.
*** Fixed: Name corrected.
** Animator Cahail
*** New: UTID updated.
*** Fixed: Name corrected.

* Empyrean Core
** Baird Bringhurst
*** New: UTID updated.
** Kaliban's Bodyguards
*** New: Mercutial's UTID updated.
*** New: Strauz's UTID updated.
** Doctor Perfidus
*** New: UTID updated.
** Prince Kaliban
*** New: UTID updated.
*** Fixed: Due to the UTID update, this encounter will no longer trigger during the quest in City Core.
*** Note: The expert version will still fire until the expert UTID is updated.

* Tower of the Shattered
** Kronox
*** New: UTID updated.
** Psychophage Primakov
*** New: UTID updated.
** Overseer Cowel
*** New: UTID updated.
** General Thunderscar
*** New: UTID updated.
** Commissar Typhiria
*** New: UTID updated.
*** Fixed: Name corrected, file changed.

----
v1.3.4

Greenscale's Blight
* Lord Greenscale
** Fixed: Error with uDetails during Air phase.

Rift:Storm Legion
Normal Dungeons
* Archive of Flesh
** Ahzrius
** Cahail
** Emphalea
** Tzul
* Empyrean Core
** Baird Bringhurst
** Kaliban's Bodyguards