@@ -36,7 +36,7 @@ MOD.Liaz = {
 	Dead = false,
 	Available = false,
 	UnitID = nil,
-	UTID = "none",
+	UTID = "UFCD9484316D15BB6",
 	TimeOut = 5,
 	Triggers = {},
 	Settings = {
