@@ -36,7 +36,7 @@ MOD.UV315 = {
 	Dead = false,
 	Available = false,
 	UnitID = nil,
-	UTID = "none",
+	UTID = "UFE7E1D5316D8EAAE",
 	TimeOut = 5,
 	Triggers = {},
 	Settings = {
