@@ -51,7 +51,9 @@ MOD.Lang.Unit = {}
 MOD.Lang.Unit.Throne = KBM.Language:Add(MOD.Throne.Name)
 MOD.Lang.Unit.Throne:SetGerman("Nekrotischer Thron")
 MOD.Lang.Unit.ThroneL = KBM.Language:Add("Left Throne")
+MOD.Lang.Unit.ThroneL:SetGerman("Linker Thron")
 MOD.Lang.Unit.ThroneR = KBM.Language:Add("Right Throne")
+MOD.Lang.Unit.ThroneR:SetGerman("Rechter Thron")
 MOD.Throne.Name = MOD.Lang.Unit.Throne[KBM.Lang]
 MOD.Descript = MOD.Throne.Name
 MOD.Lang.Unit.AndShort = KBM.Language:Add("Throne")
